# cpp_gui_template

./: .gitmodules  CMakeLists.txt  README.md
include/: stdafx.hpp
src/: main.cpp
test/: CMakeLists.txt
